--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-h2 {
-    color: blue;
+h1 {
+    text-align: center;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
 }
 
 body {
     background-color: powderblue;
 }
-
 
 p {
     color: red;
